--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI = "mongodb+srv://harshit044:BankLogin3!@cluster0.hd8p1wj.mongodb.net/chatterbox?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI = "mongodb+srv://harshit044:@cluster0.hd8p1wj.mongodb.net/chatterbox?retryWrites=true&w=majority&appName=Cluster0"
 
-RESEND_API_KEY = "re_c8KwUCB9_DbSRyz94pxY173Rz4Eo4AwZN"
+RESEND_API_KEY = ""
 NEXTAUTH_SECRET = aASDAKLSJDKLASSJDLKASJDLKASJDLKMXLKN;LADSK
